# brachistochrone

./: .gitignore  Cargo.toml  Makefile
src/: brachistochrone.rs  main.rs
src/assets/translations/: en.json  pt.json
web/: index.html
