[package]
name = "brachistochrone"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.1"
rapier2d = "0.31.0"
serde = "1.0.228"
serde_json = "1.0.145"

[dependencies.web-sys]
version = "0.3.82"
features = ["Window", "Location", "Document"]

[dependencies.bevy]
version = "0.17.3"
features = ["experimental_bevy_feathers"]

[dependencies.bevy_rapier2d]
git = "https://github.com/dimforge/bevy_rapier.git"
rev = "f15ff6b"

[profile.release]
lto = "thin"
opt-level = "s"
